--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <h1>Password Generator</h1>
+    <main>
+        <h2 >STRONG PASSWORD GENERATOR</h2>
+        <p> Generate strong passwords to prevent thread and passwords being missused</p>
+       
+        <button>Generate password</button>
+        
+    </main>
     <script src="main.js"></script>
 </body>
 </html>
