final working product

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Password Generator</h1>
+    <h1 >Password Generator</h1>
     <main>
-        <h2 >STRONG PASSWORD GENERATOR</h2>
-        <p> Generate strong passwords to prevent thread and passwords being missused</p>
+        <h2 id="topText" >STRONG PASSWORD GENERATOR</h2>
+        <p id="result"> Generate strong passwords to prevent thread and passwords being missused</p>
        
-        <button>Generate password</button>
+        <button id="submit">Generate password</button>
         
     </main>
     <script src="main.js"></script>
